fix(Featured): Featured card text more readable

--- a/src/components/FeaturedCard/index.module.css
+++ b/src/components/FeaturedCard/index.module.css
@@ -13,6 +13,17 @@
     transition: opacity 0.1s ease-in-out;
 }
 
+.container::after {
+    width: 100%;
+    position: absolute;
+    height: 100%;
+    background: linear-gradient(-135deg, transparent, #0000004d);
+    content: '';
+    z-index: -1;
+    bottom: 0;
+    left: 0;
+}
+
 .edit-container {
     position: absolute;
     background-color: #000000c7;
